--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <nav>
             <div id="nav-container" hidden>
                 <ul class="nav-items">
+                    <li><button id="catalogo-prueba" class="btn cargar-catalogo-btn">Cargar Catálogo de prueba</button></li>
                     <li><a href="#carrito-container"><img class="logo-carrito" src="https://img.icons8.com/ios/50/000000/shopping-cart-loaded--v2.png"/></a></li>
                     <li id="close-session"></li>
                 </ul>
