Corrección carga Catálogo importado de LS

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             <button id="btn-fin-compra" class="btn btn-fin-compra">Finalizar Compra</button>
         </div>
         <div class="carrito-container" id="carrito-container"></div>
-        <h4 class="carrito-total" id="carrito-total">Total Compra: </h4>
+        <h4 class="carrito-total" id="carrito-total">Importe Total Compra: </h4>
+        <!-- <h4 class="carrito-total" id="carrito-total"></h4> -->
     </div>
 
     <script src="./javascript/index.js"></script>
